[workspace]

members = [
    "arm_lib",
    "x86_lib",
    "aarch64_lib",
    "pic_lib",
    "superh4_lib",
    "z80_lib",

    #"65c02_test",
    #"6502_test",

    "arm4_be_test",
    "arm4_le_test",
    "arm4t_be_test",
    "arm4t_le_test",
    "arm5_be_test",
    "arm5_le_test",
    "arm5t_be_test",
    "arm5t_le_test",
    "arm6_be_test",
    "arm6_le_test",
    "arm7_be_test",
    "arm7_le_test",
    "arm8_be_test",
    "arm8_le_test",

    "pic12c5xx_test",
    "pic16c5x_test",

    "superh4_be_test",
    "superh4_le_test",

    #"data_be_64_test",
    #"toy64_le_test",
    #"toy_builder_be_test",
    #"toy_builder_le_align2_test",
    #"toy_wsz_le_test",
    #"data_le_64_test",
    #"toy64_be_test",
    #"toy_be_test",
    #"toy_builder_be_align2_test",
    #"toy_le_test",
    #"toy64_be_harvard_test",
    #"toy_be_posstack_test",
    #"toy_builder_le_test",
    #"toy_wsz_be_test",
    #"6805_test",
    #"6809_test",
    #"80251_test",
    #"80390_test",
    #"8051_test",
    #"8085_test",
    "aarch64_test",
    "aarch64_applesilicon_test",
    "aarch64be_test",
    #"avr8_test",
    #"avr8e_test",
    #"cp1600_test",
    #"cr16b_test",
    #"cr16c_test",
    #"jvm_test",
    #"dalvik_base_test",
    #"dalvik_dex_android10_test",
    #"dalvik_dex_android11_test",
    #"dalvik_dex_android12_test",
    #"dalvik_dex_kitkat_test",
    #"dalvik_dex_lollipop_test",
    #"dalvik_dex_marshmallow_test",
    #"dalvik_dex_nougat_test",
    #"dalvik_dex_oreo_test",
    #"dalvik_dex_pie_test",
    #"dalvik_odex_kitkat_test",
    #"dspic30f_test",
    #"dspic33c_test",
    #"dspic33e_test",
    #"dspic33f_test",
    #"h6309_test",
    #"hc05_test",
    #"hc08_test",
    #"hcs08_test",
    #"hcs12_test",
    #"m8c_test",
    #"mcs96_test",
    #"mx51_test",
    #"mips32be_test",
    #"mips32le_test",
    #"mips32r6be_test",
    #"mips32r6le_test",
    #"mips64be_test",
    #"mips64le_test",
    #"pa_risc32be_test",
    #"pic16_test",
    #"pic16f_test",
    #"pic17c7xx_test",
    #"pic18_test",
    #"pic24e_test",
    #"pic24f_test",
    #"pic24h_test",
    #"ppc_32_4xx_be_test",
    #"ppc_32_4xx_le_test",
    #"ppc_32_be_test",
    #"ppc_32_le_test",
    #"ppc_32_quicciii_be_test",
    #"ppc_32_quicciii_le_test",
    #"ppc_64_be_test",
    #"ppc_64_isa_altivec_be_test",
    #"ppc_64_isa_altivec_le_test",
    #"ppc_64_isa_altivec_vle_be_test",
    #"ppc_64_isa_be_test",
    #"ppc_64_isa_le_test",
    #"ppc_64_isa_vle_be_test",
    #"ppc_64_le_test",
    #"riscv.ilp32d_test",
    #"riscv.lp64d_test",
    #"sh_1_test",
    #"sh_2_test",
    #"sh_2a_test",

    "sparcv9_32_test",
    "sparcv9_64_test",

    #"tricore_test",
    "v850_test",

    "x86_test",
    "x86_64_test",

    "z180_test",
    "z80_test",
]
