[package]
name = "arm5t_be_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arm5t_be = { path = "../../sleigh3rust/arm5t_be" }
sleigh4rust = { path = "../../sleigh4rust", version = "0.1" }
arm_lib = { path = "../arm_lib" }
