[package]
name = "arm_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
#sleigh-compile = { path = "../../icicle-emu/sleigh/sleigh-compile" }
#sleigh-runtime = { path = "../../icicle-emu/sleigh/sleigh-runtime" }
