[package]
name = "pic12c5xx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic12c5xx = { path = "../../sleigh3rust/pic12c5xx" }
pic_lib = { path = "../pic_lib" }
sleigh4rust = { path = "../../sleigh4rust", version = "0.1" }
