[package]
name = "pic16c5x_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic16c5x = { path = "../../sleigh3rust/pic16c5x" }
pic_lib = { path = "../pic_lib" }
sleigh4rust = { path = "../../sleigh4rust", version = "0.1" }
