[package]
name = "superh4_be_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superh4_be = { path = "../../sleigh3rust/superh4_be" }
superh4_lib = { path = "../superh4_lib" }
sleigh4rust = { path = "../../sleigh4rust", version = "0.1" }
