[package]
name = "superh4_le_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superh4_le = { path = "../../sleigh3rust/superh4_le" }
superh4_lib = { path = "../superh4_lib" }
sleigh4rust = "0.1"
